# git-scraper

./: .gitignore  eb.json  main.py  pyproject.toml
.github/workflows/: scrape_setup.yml
